--- a/package.json
+++ b/package.json
@@ -21,7 +21,7 @@
   },
   "author": {
     "name": "DevOps@Home",
-    "url": "devops-at-ho.me",
+    "url": "https://devops-at-ho.me",
     "organization": false
   },
   "devDependencies": {
@@ -30,6 +30,7 @@
     "@types/react-dom": "^18.0.6",
     "npm-check-updates": "^15",
     "projen": "^0.62.10",
+    "ts-node": "^10.9.1",
     "typescript": "^4.8.3"
   },
   "dependencies": {
