--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "@types/react": "^18.0.20",
     "@types/react-dom": "^18.0.6",
     "npm-check-updates": "^15",
+    "prettier": "^2.7.1",
     "projen": "^0.62.10",
     "ts-node": "^10.9.1",
     "typescript": "^4.8.3"
