--- a/package.json
+++ b/package.json
@@ -45,7 +45,7 @@
   "engines": {
     "node": ">= 12.22.0"
   },
-  "license": "Apache-2.0",
+  "license": "MIT",
   "version": "0.0.0",
   "resolutions": {
     "@types/responselike": "1.0.0",
