--- a/.gitignore
+++ b/.gitignore
@@ -3,6 +3,7 @@
 !/.projen/tasks.json
 !/.projen/deps.json
 !/.projen/files.json
+!/.github/workflows/pull-request-lint.yml
 !/package.json
 !/LICENSE
 !/.npmignore
@@ -29,20 +30,22 @@ jspm_packages/
 *.tgz
 .yarn-integrity
 .cache
-.idea
 !/.projenrc.js
+/test-reports/
+junit.xml
+/coverage/
 !/.github/workflows/build.yml
 !/.mergify.yml
 !/.github/workflows/upgrade.yml
 !/.github/pull_request_template.md
-!/.prettierignore
-!/.prettierrc.json
 !/test/
 !/tsconfig.json
 !/tsconfig.dev.json
-!/pages/
+!/src/
 /lib
 /dist/
-!/tailwind.config.json
-!/postcss.config.json
-/.next/
+/assets/
+!/cdk.json
+/cdk.out/
+.cdk.staging/
+.parcel-cache/
