--- a/package.json
+++ b/package.json
@@ -2,19 +2,23 @@
   "name": "devops-at-ho.me-blog",
   "scripts": {
     "build": "npx projen build",
+    "bundle": "npx projen bundle",
     "clobber": "npx projen clobber",
     "compile": "npx projen compile",
     "default": "npx projen default",
-    "dev": "npx projen dev",
+    "deploy": "npx projen deploy",
+    "destroy": "npx projen destroy",
+    "diff": "npx projen diff",
     "eject": "npx projen eject",
-    "export": "npx projen export",
     "package": "npx projen package",
     "post-compile": "npx projen post-compile",
     "post-upgrade": "npx projen post-upgrade",
     "pre-compile": "npx projen pre-compile",
-    "server": "npx projen server",
-    "telemetry": "npx projen telemetry",
+    "synth": "npx projen synth",
+    "synth:silent": "npx projen synth:silent",
     "test": "npx projen test",
+    "test:update": "npx projen test:update",
+    "test:watch": "npx projen test:watch",
     "upgrade": "npx projen upgrade",
     "watch": "npx projen watch",
     "projen": "npx projen"
@@ -25,28 +29,64 @@
     "organization": false
   },
   "devDependencies": {
-    "@types/node": "^12",
-    "@types/react": "^18.0.20",
-    "@types/react-dom": "^18.0.6",
+    "@types/jest": "^29.0.3",
+    "@types/node": "^14",
+    "aws-cdk": "^2.42.0",
+    "esbuild": "^0.15.7",
+    "jest": "^29.0.3",
+    "jest-junit": "^13",
     "npm-check-updates": "^15",
-    "prettier": "^2.7.1",
     "projen": "^0.62.10",
+    "ts-jest": "^29.0.1",
     "ts-node": "^10.9.1",
     "typescript": "^4.8.3"
   },
   "dependencies": {
-    "autoprefixer": "^10.4.11",
-    "next": "^12.3.0",
-    "postcss": "^8.4.16",
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0",
-    "tailwindcss": "^3.1.8"
+    "aws-cdk-lib": "^2.42.0",
+    "constructs": "^10.0.5"
   },
-  "engines": {
-    "node": ">= 12.22.0"
-  },
-  "license": "MIT",
+  "license": "Apache-2.0",
   "version": "0.0.0",
+  "jest": {
+    "testMatch": [
+      "<rootDir>/src/**/__tests__/**/*.ts?(x)",
+      "<rootDir>/(test|src)/**/*(*.)@(spec|test).ts?(x)"
+    ],
+    "clearMocks": true,
+    "collectCoverage": true,
+    "coverageReporters": [
+      "json",
+      "lcov",
+      "clover",
+      "cobertura",
+      "text"
+    ],
+    "coverageDirectory": "coverage",
+    "coveragePathIgnorePatterns": [
+      "/node_modules/"
+    ],
+    "testPathIgnorePatterns": [
+      "/node_modules/"
+    ],
+    "watchPathIgnorePatterns": [
+      "/node_modules/"
+    ],
+    "reporters": [
+      "default",
+      [
+        "jest-junit",
+        {
+          "outputDirectory": "test-reports"
+        }
+      ]
+    ],
+    "preset": "ts-jest",
+    "globals": {
+      "ts-jest": {
+        "tsconfig": "tsconfig.dev.json"
+      }
+    }
+  },
   "resolutions": {
     "@types/responselike": "1.0.0",
     "got": "12.3.1"
