--- a/.gitignore
+++ b/.gitignore
@@ -3,7 +3,6 @@
 !/.projen/tasks.json
 !/.projen/deps.json
 !/.projen/files.json
-!/.github/workflows/pull-request-lint.yml
 !/package.json
 !/LICENSE
 !/.npmignore
@@ -30,6 +29,7 @@ jspm_packages/
 *.tgz
 .yarn-integrity
 .cache
+.idea
 !/.projenrc.js
 /test-reports/
 junit.xml
@@ -38,6 +38,8 @@ junit.xml
 !/.mergify.yml
 !/.github/workflows/upgrade.yml
 !/.github/pull_request_template.md
+!/.prettierignore
+!/.prettierrc.json
 !/test/
 !/tsconfig.json
 !/tsconfig.dev.json
