--- a/package.json
+++ b/package.json
@@ -29,6 +29,8 @@
     "organization": false
   },
   "devDependencies": {
+    "@sls-next/cdk-construct": "^3.7.0",
+    "@sls-next/lambda-at-edge": "^3.7.0",
     "@types/jest": "^29.0.3",
     "@types/node": "^14",
     "aws-cdk": "^2.42.0",
@@ -36,6 +38,7 @@
     "jest": "^29.0.3",
     "jest-junit": "^13",
     "npm-check-updates": "^15",
+    "prettier": "^2.7.1",
     "projen": "^0.62.10",
     "ts-jest": "^29.0.1",
     "ts-node": "^10.9.1",
@@ -45,12 +48,13 @@
     "aws-cdk-lib": "^2.42.0",
     "constructs": "^10.0.5"
   },
-  "license": "Apache-2.0",
+  "license": "MIT",
   "version": "0.0.0",
   "jest": {
     "testMatch": [
       "<rootDir>/src/**/__tests__/**/*.ts?(x)",
-      "<rootDir>/(test|src)/**/*(*.)@(spec|test).ts?(x)"
+      "<rootDir>/(test|src)/**/*(*.)@(spec|test).ts?(x)",
+      "**/?(*.)@(spec|test).[tj]s?(x)"
     ],
     "clearMocks": true,
     "collectCoverage": true,
