--- a/.projen/tasks.json
+++ b/.projen/tasks.json
@@ -131,7 +131,13 @@
     },
     "pre-compile": {
       "name": "pre-compile",
-      "description": "Prepare the project for compilation"
+      "description": "Prepare the project for compilation",
+      "steps": [
+        {
+          "exec": "yarn install",
+          "cwd": "app"
+        }
+      ]
     },
     "synth": {
       "name": "synth",
